# manip-waiter

./: CMakeLists.txt  README.md
cmake/template/: MANIP_WAITERConfig.cmake.in  WBPC_WAITERConfig.cmake.in
doc/: groups.dox  main.dox
libraries/: CMakeLists.txt
libraries/TeoYarp/BasicCartesianControl/: ICartesianControlImpl.cpp
libraries/TeoYarp/CartesianControlServer/: CartesianControlServer.hpp  DeviceDriverImpl.cpp
libraries/TeoYarp/KdlSolver/: ICartesianSolverImpl.cpp
programs/: CMakeLists.txt  README.md
programs/TestCap52/: CMakeLists.txt  TestCap52.cpp  TestCap52.hpp  main.cpp
programs/ankle_strategy_sagittal/: CMakeLists.txt  LIPM2d.cpp  LIPM2d.h  data.csv  global.h  main.cpp  ratethread.h  ratethread.h.save
programs/ankle_strategy_sagittal/qtcreator-build/: CMakeCache.txt  Makefile  cmake_install.cmake  yarpy.cbp
programs/jr3WristControl/: CMakeLists.txt  InCvPort.cpp  InCvPort.hpp  InSrPort.cpp  InSrPort.hpp  Jr3WristControl.cpp  Jr3WristControl.hpp  main.cpp
programs/manipWaiterDialogueManager/: CMakeLists.txt  WaiterDialogueManager.cpp
programs/manipWaiterExecHead/: CMakeLists.txt  InCvPort.cpp  WaiterExecHead.cpp  WaiterExecHead.hpp
programs/manipWaiterExecManip/: CMakeLists.txt  InCvPort.cpp  InCvPort.hpp  WaiterExecManip.cpp  WaiterExecManip.hpp  main.cpp
programs/teoCartesianServer/: CartesianRateThread.cpp  TeoCartesianServer.hpp  TeoXRpcResponder.cpp
programs/test1/: CMakeLists.txt  InCvPort.cpp  InCvPort.hpp  InSrPort.cpp  InSrPort.hpp  Test1.cpp  Test1.hpp  main.cpp
programs/test2/: CMakeLists.txt  InSrPort.cpp  Test2.cpp  Test2.hpp  main.cpp
programs/test3/: CMakeLists.txt  InSrPort.cpp  InSrPort.hpp  Test3.cpp  Test3.hpp  main.cpp
programs/testCap10/: CMakeLists.txt  MyRateThread.hpp  main.cpp
programs/testCap51/: CMakeLists.txt  InSrPort.cpp  InSrPort.hpp  TestCap51.cpp  TestCap51.hpp  main.cpp
programs/testCap511/: CMakeLists.txt  TestCap511.cpp  TestCap511.hpp  ThreadImpl.cpp  ThreadImpl.hpp  main.cpp
programs/testCap52/: CMakeLists.txt  InSrPort.hpp  TestCap52.cpp  TestCap52.hpp  ThreadImpl.cpp  ThreadImpl.hpp  main.cpp
programs/testCap522/: CMakeLists.txt
programs/testCap53/: CMakeLists.txt  TestCap53.cpp  TestCap53.hpp  ThreadImpl.cpp  main.cpp  pid.cpp  pid.h  ratethread.h
programs/testCap53a/: CMakeLists.txt  LIPM2d.cpp  LIPM2d.h  TestCap53a.cpp  TestCap53a.hpp  ThreadImpl.cpp  ThreadImpl.hpp  main.cpp  ratethread.h
programs/testCap53b/: CMakeLists.txt  LIPM2d.cpp  TestCap53b.cpp  TestCap53b.hpp  ThreadImpl.cpp  ThreadImpl.hpp  global.h  main.cpp
programs/testCap54/: CMakeLists.txt  LIPM2d.cpp  LIPM2d.h  TestCap54.cpp  TestCap54.hpp  ThreadImpl.cpp  ThreadImpl.hpp  main.cpp
programs/testCap544/: CMakeLists.txt  TestCap544.cpp  TestCap544.hpp  ThreadImpl.cpp  ThreadImpl.hpp  main.cpp
programs/testCap61/: CMakeLists.txt  TestCap61.cpp  TestCap61.hpp  main.cpp
programs/testCap81/: CMakeLists.txt  MyRateThread.cpp  main.cpp
programs/testCap91/: CMakeLists.txt  TestCap91.cpp  TestCap91.hpp  ThreadImpl.cpp  ThreadImpl.hpp  global.h  main.cpp
programs/waiterArmMov/: WaiterArmMov.cpp
programs/waiterExecManip/: CMakeLists.txt  InCvPort.cpp  InCvPort.hpp  WaiterExecManip.cpp  WaiterExecManip.hpp
programs/zmpTEOwrist/: CMakeLists.txt  MyRateThread.cpp  MyRateThread.hpp  main.cpp
scripts/admin/: update-dox.sh
scripts/gnome/: manip-waiter.desktop  wbpc-waiter yarpmanager.desktop
share/: CMakeLists.txt
share/app/WBPCwaiter/scripts/: wbpc_waiter_english.xml
share/app/manip-waiter/scripts/: manip_waiter_english.xml
share/app/wbpc-waiter/scripts/: wbpc_waiter_english.xml
share/kinematics/: CMakeLists.txt  leftArmKinematics-waiter.ini  leftLegKinematics-waiter.ini  rightLegKinematics-waiter.ini  trunkKinematics-waiter.ini
